# ECE5730_Final_Project

brl4_wifi_udp_ap_station_receiver/: CMakeLists.txt  lwipopts.h  picow_udp_simple_ap_station.c  vga_graphics.c
brl4_wifi_udp_ap_station_sender/: CMakeLists.txt  picow_udp_simple_ap_station.c
brl4_wifi_udp_ap_station_sender/dhcpserver/: dhcpserver.c  dhcpserver.h
